--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "types.h": "c"
+        "types.h": "c",
+        "user.h": "c",
+        "defs.h": "c",
+        "stat.h": "c",
+        "param.h": "c"
     }
 }
